# miniircd-peerchat

./: .gitignore  CHANGES  README.md  miniircd  pyproject.toml
.github/local/: format.sh  util.sh
.github/scripts/: lint.sh
source/: channel.py  connected_client.py  irc_helpers.py  miniircd.py  server.py  version.py
source/commands/: channel.py  channel_or_session.py  global_commands.py  session.py
source/pkg4/: encoding.py  generator.py  lobby.py  time.py  user_message.py  world_data.py
